try to fix color contrast

--- a/Final/styles/media-queries.css
+++ b/Final/styles/media-queries.css
@@ -360,6 +360,56 @@
         top: 0;
         right: 0;
     }
+
+    /* pay order */
+    .main-order {
+        /* align-items: center; */
+        padding: 0;
+    }
+
+    .main-order>h2 {
+        text-align: left;
+        margin: 0;
+        padding: 0;
+    }
+
+    .order-slider-container {
+        max-width: 1032px;
+        margin: 0;
+    }
+
+    .main-order {
+        padding-left: 20rem;
+        padding-right: 20rem;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+
+    .order-form {
+        padding: 0;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .order-form>* {
+        flex-basis: 40%;
+        margin: 0;
+    }
+
+    .order-form>div:nth-child(1) {
+        order: -2;
+    }
+
+    .order-form>p {
+        order: -1;
+        text-align: right;
+
+    }
+
+    .order-form-btn {
+        max-width: 8.75rem;
+    }
 }
 
 @media screen and (min-width: 1150px) {
